--- a/CLIENT/src/components/ProjectDetailModal.css
+++ b/CLIENT/src/components/ProjectDetailModal.css
@@ -16,6 +16,7 @@
     background-color: white;
     border-radius: 1rem;
     max-width: 50vw;
+    min-width: 50vw;
     max-height: 90vh;
 
     overflow: hidden;
