--- a/CLIENT/src/components/ProjectDetailModal.css
+++ b/CLIENT/src/components/ProjectDetailModal.css
@@ -115,7 +115,7 @@
     color: white;
 }
 
-.status-badge.in-progress {
+.status-badge.in_progress {
     background-color: #f59e0b;
     color: white;
 }
