--- a/CLIENT/src/components/ServiceProjectsModal.css
+++ b/CLIENT/src/components/ServiceProjectsModal.css
@@ -170,7 +170,7 @@
     color: white;
 }
 
-.status-badge.in-progress {
+.status-badge.in_progress {
     background-color: #f59e0b;
     color: white;
 }
