--- a/CLIENT/src/components/sections/Projects.css
+++ b/CLIENT/src/components/sections/Projects.css
@@ -80,7 +80,7 @@
     background-color: #10b981;
 }
 
-.status-badge.in-progress {
+.status-badge.in_progress {
     background-color: #f59e0b;
 }
 
